--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "portfolio",
+  "name": "gulp-sass-autoprefixer-concat-browsersync",
   "version": "0.0.0",
-  "description": "My portfolio using gulp",
+  "description": "A starter project including full setup for GulpJS, SASS, Autoprefixer, Concat & BrowserSync",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,7 +19,14 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.6.1",
-    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/quanticbuda/gulp-sass-prefix-concat-sync.git"
+  },
+  "bugs": {
+    "url": "https://github.com/quanticbuda/gulp-sass-prefix-concat-sync/issues"
+  },
+  "homepage": "https://github.com/quanticbuda/gulp-sass-prefix-concat-sync"
 }
